adding form for barbers

--- a/app/views/barbers/index.html.erb
+++ b/app/views/barbers/index.html.erb
@@ -1,9 +1,9 @@
 <h1> Barber Shops</h1>
-#barber shop name will go here
+<!-- barber shop name will go here -->
 
-<%= @barbers.each do |b| %>
- <%= b.name %>
- <%= b.instagram %>
- <%= b.phone %>
- <%= b.photo %>
+<%= @barber.each do |p| %>
+    <!--  calls link_to method and the two arguments pass to it are the name that will become a link the route to that link, and the class to style it -->
+  <%= link_to p.name, post_path(p), class: "title" %> <br>
+<!--          p.title calls the column title store in this objects and renders it for each objects instance that's passing by  -->
+
 <% end %>
