--- a/app/views/barbers/show.html.erb
+++ b/app/views/barbers/show.html.erb
@@ -1,9 +1,7 @@
 <h1>Style</h1>
 
-<%= @barber do |b| %>
-<%= b.name %>
-<%= b.instagram %>
-<%= b.phone %>
-<%= b.photo %>
 
-<% end %>
+<%= @barber.name %>
+<%= @barber.instagram %>
+<%= @barber.phone %>
+<%= @barber.photo %>
