add it classes to barbers profile attributes

--- a/app/views/barbers/show.html.erb
+++ b/app/views/barbers/show.html.erb
@@ -1,7 +1,7 @@
 <h1>Style</h1>
 
 
-<%= @barber.name %>
-<%= @barber.instagram %>
-<%= @barber.phone %>
-<%= @barber.photo %>
+<div class:"barber_name"> <%= @barber.name %> </div>
+<div class:"barber_instagram"> <%= @barber.instagram %> </div>
+<div class:"barber_phone"> <%= @barber.phone %>
+<div class:"barber_photo"> <%= @barber.photo %>
