--- a/app/views/barbers/show.html.erb
+++ b/app/views/barbers/show.html.erb
@@ -1,6 +1,6 @@
 <h1>Style</h1>
 
-
+<%= image_tag @barber.avatar.url(:square) %>
 <div class:"barber_name"> <%= @barber.name %> </div>
 <div class:"barber_instagram"> <%= @barber.instagram %> </div>
 <div class:"barber_phone"> <%= @barber.phone %>
