--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -8,6 +8,24 @@
 </head>
 <body>
 
+</li>
+<% if user_signed_in? %>
+
+<li>
+  <%= link_to "Log out", destroy_user_session_path, :method => :delete %>
+<% else %>
+</li>
+<li>
+  <%= link_to "Sign In", new_user_session_path %>
+</li>
+<li>
+  <%= link_to "Sign Up", new_user_registration_path %>
+  <% end %>
+
+
+
+
+
 <%= yield %>
 
 </body>
