--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -16,10 +16,10 @@
 <% else %>
 </li>
 <li>
-  <%= link_to "Sign In", new_user_session_path %>
+  <%= link_to "Log In", new_user_session_path %>
 </li>
 <li>
-  <%= link_to "Sign Up", new_user_registration_path %>
+  <%= link_to "Register", new_user_registration_path %>
   <% end %>
 
 
