--- a/app/views/barbers/_form.html.erb
+++ b/app/views/barbers/_form.html.erb
@@ -4,57 +4,42 @@
 
 <%= form_for(@barber, multipart: true) do |instance_post| %>
   <ul>
-    <!--  calls the error method on article and passes it on the full message if nil it will spit out an error -->
   <% @barber.errors.full_messages.each do |error| %>
     <li><%= error %></li>
   <% end %>
   </ul>
 
   <div class="form_field">
-    <p>   <!--  calls the label method on the instance of the post so is specifys the column-->
+    <p>
       <%= instance_post.label :name %><br />
-
-      <!--  calls the text_field method on the instance of the post and assigns it to the column you refer to in in the model-->
-      <!--  field means is not a lot -->
       <%= instance_post.text_field :name %>
     </p>
   </div>
 
   <div class="form_field">
-    <p><!--  calls the label method on the instance of the post so is specifys the column-->
+    <p>
       <%= instance_post.label :phone %><br />
-
-      <!--  calls the text_area method on the instance of the post and assigns it to the column you refer to in db--><!--  -->
-      <!--  area means is expect a lot -->
       <%= instance_post.text_area :phone %>
     </p>
   </div>
 
   <div class="form_field">
-    <p><!--  calls the label method on the instance of the post so is specifys the column-->
+    <p>
       <%= instance_post.label :instagram %><br />
-
-      <!--  calls the text_area method on the instance of the post and assigns it to the column you refer to in db--><!--  -->
-      <!--  area means is expect a lot -->
       <%= instance_post.text_area :instagram %>
     </p>
   </div>
 
   <div class="form_field">
-    <p><!--  calls the label method on the instance of the post so is specifys the column-->
+    <p>
       <%= instance_post.label :avatar %><br />
-
-      <!--  calls the text_area method on the instance of the post and assigns it to the column you refer to in db--><!--  -->
-      <!--  area means is expect a lot -->
-      <%= instance_post.text_area :avatar %>
+      <%= instance_post.file_field :avatar %>
     </p>
   </div>
 
   <div class="action_buttom">
     <p>
-      <!--  calls the submit method on the instance of the post so it can be store in the db-->
-      <!-- so it saves this new column in the variable you refer to for this form -->
       <%= instance_post.submit 'save this sir', class: "save_boton" %>
-    </p>         <!--  gives it a class to be style, and calls the create method in the controller .  -->
+    </p>
   </div>
 <% end %>
