--- a/app/views/barbers/show.html.erb
+++ b/app/views/barbers/show.html.erb
@@ -6,4 +6,5 @@
   <div class:"barber_phone"> <%= @barber.phone %> </div>
   <div class:"barber_photo"> <%= @barber.photo %> </div>
 
-  <%= link_to "Edit Profile", edit_barber_path(@barber), class: "editprofile"%>
+  <%= link_to "Edit Profile", edit_barber_path(@barber), class: "editprofile"%> |
+  
