--- a/app/views/shops/edit.html.erb
+++ b/app/views/shops/edit.html.erb
@@ -1,5 +1,6 @@
-<h1>New Barber</h1>
+<h1>Editing Shop</h1>
 
 <%= render 'form' %>
 
+<%= link_to 'Show', @shop %> |
 <%= link_to 'Back', shops_path %>
