add google maps api with libary places

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -9,6 +9,7 @@
 <body>
 
 <%= yield %>
-
+<script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyDx_QuTTTgggaYz61nA2JVp3m2cpxIYPxU&libraries=places&callback=initAutocomplete"
+         async defer></script>
 </body>
 </html>
