--- a/app/views/barbers/index.html.erb
+++ b/app/views/barbers/index.html.erb
@@ -1,5 +1,7 @@
 <p id="notice"><%= notice %></p>
 
+
+
 <h1>Listing Barbers</h1>
 
 <h1>Style</h1>
@@ -23,3 +25,12 @@
 <!-- whats going on here -->
 
 <%= link_to 'New Barber', new_shop_barber_path %>
+
+
+
+
+  <div class:"searchbox" >
+    <input id="pac-input" class="controls" type="text"
+    placeholder="zipcode" autocomplete="off" style="z-index: 0; position: absolute; left: 50%; top: 0px; text-align: center;">
+  </div>
+  <div id="map"></div>
