--- a/app/views/shops/index.html.erb
+++ b/app/views/shops/index.html.erb
@@ -29,3 +29,9 @@
 <br>
 
 <%= link_to 'New Shop', new_shop_path %>
+
+<div class:"searchbox" >
+  <input id="pac-input" class="controls" type="text"
+  placeholder="zipcode" autocomplete="off" style="z-index: 0; position: absolute; left: 50%; top: 0px; text-align: center;">
+</div>
+<div id="map"></div>
