--- a/app/views/shops/index.html.erb
+++ b/app/views/shops/index.html.erb
@@ -1,4 +1,7 @@
-<p id="notice"><%= notice %></p>
+<script src="//maps.google.com/maps/api/js?v=3.18&sensor=false&client=&key=&libraries=geometry&language=&hl=&region="></script>
+<script src="//google-maps-utility-library-v3.googlecode.com/svn/tags/markerclustererplus/2.0.14/src/markerclusterer_packed.js"></script>
+<script src='//google-maps-utility-library-v3.googlecode.com/svn/tags/infobox/1.1.9/src/infobox_packed.js' type='text/javascript'></script> <!-- only if you need custom infoboxes -->
+
 
 <h1>Listing Shops</h1>
 
@@ -30,8 +33,16 @@
 
 <%= link_to 'New Shop', new_shop_path %>
 
-<div class:"searchbox" >
-  <input id="pac-input" class="controls" type="text"
-  placeholder="zipcode" autocomplete="off" style="z-index: 0; position: absolute; left: 50%; top: 0px; text-align: center;">
+<div style='width: 800px;'>
+  <div id="map" style='width: 800px; height: 400px;'></div>
 </div>
-<div id="map"></div>
+
+<script type="text/javascript">
+handler = Gmaps.build('Google');
+handler.buildMap({ provider: {}, internal: {id: 'map'}}, function(){
+  markers = handler.addMarkers(<%=raw @map_hash.to_json %>);
+  handler.bounds.extendWith(markers);
+  handler.fitMapToBounds();
+});
+
+</script>
