changed instagram image size to thumbnail

--- a/app/views/barbers/show.html.erb
+++ b/app/views/barbers/show.html.erb
@@ -22,7 +22,7 @@
 
 <% @instagram.each do |instagram| %>
 
-<%= image_tag instagram.images.standard_resolution.url %>
+<%= image_tag instagram.images.thumbnail.url %>
 
 <% end %>
 
