--- a/app/assets/stylesheets/shops.scss
+++ b/app/assets/stylesheets/shops.scss
@@ -1,3 +1,13 @@
 // Place all the styles related to the Shops controller here.
 // They will automatically be included in application.css.
 // You can use Sass (SCSS) here: http://sass-lang.com/
+
+// shop new page
+
+#hidden-fields{
+  display: none;
+}
+
+h1 {
+  text-align: center;
+}
