--- a/app/views/shops/_form.html.erb
+++ b/app/views/shops/_form.html.erb
@@ -13,31 +13,27 @@
       </ul>
     </div>
   <% end %>
-
+  <div id="hidden-fields">
     <%= hidden_field_tag :latitude %>
     <%= f.text_field :latitude %>
 
     <%= hidden_field_tag :longitude %>
     <%= f.text_field :longitude %>
+</div>
 
+  <div class="col-md-6 col-md-offset-3">
+    <div class="form-group ">
+      <%= f.label :name %>
+      <%= f.text_field :name, class: "form-control", placeholder: "Barbershop name" %>
+    </div>
+
+    <div class="form-group">
+      <%= f.label "Address " %>
+      <%= f.text_field :address, class: "form-control", placeholder: "Address city state" %>
+    </div>
 
   <div class="form-group">
-    <%= f.label :name, class: "col-sm-2 control-label" %>
-    <div class="col-sm-10">
-      <%= f.text_field :name, class: "form-control" %>
-    </div>
+    <%= f.submit class: "btn btn-primary" %>
   </div>
-
-  <div class="form-group">
-    <%= f.label :address, class: "col-sm-2 control-label" %>
-    <div class="col-sm-10">
-      <%= f.text_field :address, class: "form-control" %>
-    </div>
-  </div>
-
-  <div class="form-group">
-    <div class="col-sm-offset-2 col-sm-10">
-      <%= f.submit class: "btn btn-primary" %>
-    </div>
   </div>
 <% end %>
