--- a/app/views/barbers/show.html.erb
+++ b/app/views/barbers/show.html.erb
@@ -1,5 +1,5 @@
 <p id="notice"><%= notice %></p>
-<%= image_tag @barber.avatar.url %>
+<%= image_tag @barber.avatar.url(:square) %>
 <p>
   <strong>Name:</strong>
   <%= @barber.name %>
@@ -20,11 +20,11 @@
   <%= @barber.shop %>
 </p>
 
-<% @instagram.each do |instagram| %>
+<!--  @instagram.each do |instagram|  -->
 
-<%= image_tag instagram.images.thumbnail.url %>
+<!--  image_tag instagram.images.thumbnail.url  -->
 
-<% end %>
+ <!-- end  -->
 
 <% @barber ||= current_barber %>
 <div class="stats">
@@ -41,6 +41,8 @@
     followers
   </a>
 </div>
+
+ 
 
 <%= link_to 'Edit', edit_shop_barber_path(@barber.shop, @barber) %> |
 <%= link_to 'Back', shop_barbers_path(@barber.shop) %>
