--- a/app/views/barbers/show.html.erb
+++ b/app/views/barbers/show.html.erb
@@ -42,6 +42,8 @@
   </a>
 </div>
 
+<div class="fb-comments" data-href="https://developers.facebook.com/docs/plugins/comments#configurator" data-numposts="3"></div>
+
 
 <%= link_to 'Edit', edit_shop_barber_path(@barber.shop, @barber) %> |
 <%= link_to 'Back', shop_barbers_path(@barber.shop) %>
