--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -67,6 +67,22 @@
 
   };
 
+
+  if (typeof (FB) != 'undefined') {
+      FB.init({ status: true, cookie: true, xfbml: true });
+  }
+  else {
+      $.getScript("http://connect.facebook.net/en_US/all.js#xfbml=1", function () {
+          FB.init({ status: true, cookie: true, xfbml: true });
+      });
+  }
+
+
+// logout function
+  FB.logout(function(response) {
+  // user is now logged out
+});
+
   // Load the SDK asynchronously
   (function(d, s, id) {
     var js, fjs = d.getElementsByTagName(s)[0];
