--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -34,6 +34,12 @@ Signed in as <%= current_customer.name %> | <%= link_to "Logout", '/logout' %>
 <%= link_to 'Login', '/login' %> | <%= link_to 'Signup', '/signup' %>
 <% end %>
 
+<% if current_barber %>
+Signed in as <%= current_barber.name %> | <%= link_to "Logout", '/logout_barber' %>
+<% else %>
+<%= link_to 'Login', '/login' %> | <%= link_to 'Signup', '/signup' %>
+<% end %>
+<% link_to  %>
 <%= yield %>
 
 </body>
