modified fb comments to only show 5

--- a/app/views/barbers/show.html.erb
+++ b/app/views/barbers/show.html.erb
@@ -42,8 +42,7 @@
   </a>
 </div>
 
-<div class="fb-comments" data-href="https://developers.facebook.com/docs/plugins/comments#configurator" data-numposts="3"></div>
-
+<div class="fb-comments" data-href="http://localhost:3000/shops/1/barbers/2" data-numposts="5"></div>
 
 <%= link_to 'Edit', edit_shop_barber_path(@barber.shop, @barber) %> |
 <%= link_to 'Back', shop_barbers_path(@barber.shop) %>
