working on star ratings

--- a/app/assets/javascripts/ratyrate.js.erb
+++ b/app/assets/javascripts/ratyrate.js.erb
@@ -53,6 +53,9 @@ $(function(){
 
             if ($(_this).attr('data-disable-after-rate') == 'true') {
               $(_this).raty('set', { readOnly: true, score: score });
+
+= require jquery.raty
+= require ratyrate
             }
           }
         });
