--- a/app/assets/stylesheets/bootstrap-variables.scss
+++ b/app/assets/stylesheets/bootstrap-variables.scss
@@ -26,9 +26,9 @@ $brand-danger:          #d9534f !default;
 //
 //## Settings for some of the most global styles.
 
-//** Background color for `<body>`.
+//** Background color for body.
 $body-bg:               #fff !default;
-//** Global text color on `<body>`.
+//** Global text color on body.
 $text-color:            $gray-dark !default;
 
 //** Global textual link color.
