--- a/app/views/shops/index.html.erb
+++ b/app/views/shops/index.html.erb
@@ -1,4 +1,4 @@
-<script src="//maps.google.com/maps/api/js?v=3.23&key=AIzaSyDx_QuTTTgggaYz61nA2JVp3m2cpxIYPxU&libraries=geometry&language=&hl=&region="></script>
+<script src="//maps.google.com/maps/api/js?v=3.23&key=AIzaSyDx_QuTTTgggaYz61nA2JVp3m2cpxIYPxU&signed_in=true&libraries=geometry&language=&hl=&region="></script>
 <script src="//google-maps-utility-library-v3.googlecode.com/svn/tags/markerclustererplus/2.0.14/src/markerclusterer_packed.js"></script>
 <script src='//google-maps-utility-library-v3.googlecode.com/svn/tags/infobox/1.1.9/src/infobox_packed.js' type='text/javascript'></script> <!-- only if you need custom infoboxes -->
 
@@ -33,24 +33,43 @@
 
 <br>
 
+<p>Click the button to get your coordinates.</p>
 
+<button onclick="getLocation()">Try It</button>
+
+<p id="demo"></p>
+
+<script>
+var x = document.getElementById("demo");
+
+function getLocation() {
+   if (navigator.geolocation) {
+       navigator.geolocation.getCurrentPosition(showPosition);
+   } else {
+       x.innerHTML = "Geolocation is not supported by this browser.";
+   }
+}
+
+function showPosition(position) {
+    x.innerHTML = "Latitude: " + position.coords.latitude +
+   "<br>Longitude: " + position.coords.longitude;
+}
+</script>
 
 
   <div id="map" ></div>
 
 
 
-<script type="text/javascript">
-
-handler = Gmaps.build('Google');
-handler.buildMap({ internal: {id: 'map'}}, function(){
-
-  markers = handler.addMarkers(
-    <%=raw @map_hash.to_json %>);
+  <script type="text/javascript">
+  handler = Gmaps.build('Google');
+  handler.buildMap({
+    provider: { scrollwheel: false, scaleControl: false, disableDoubleClickZoom: false },
+    internal: {id: 'map'}}, function(){
 
 
-  handler.bounds.extendWith(markers);
-  handler.fitMapToBounds();
-});
-
-</script>
+    markers = handler.addMarkers(<%=raw @map_hash.to_json %>);
+    handler.bounds.extendWith(markers);
+    handler.fitMapToBounds();
+  });
+  </script>
