--- a/app/views/barbers/show.html.erb
+++ b/app/views/barbers/show.html.erb
@@ -1,23 +1,15 @@
-<p id="notice"><%= notice %></p>
-<%= image_tag @barber.avatar.url(:square) %>
-<p>
-  <strong>Name:</strong>
-  <%= @barber.name %>
-</p>
+
+<div class="col-md-4">
+  <%= link_to 'back', shop_path(@shop) %>
+  <div class="profile-pic"><%= image_tag @barber.avatar.url(:square) %></div>
+  <div class="profile-info">
+    <%= @barber.name %> <br>
+    <%= @barber.instagram %>
+  </div>
+</div>
 
 
-<p>
-  <strong>Instagram:</strong>
-  <%= @barber.instagram %>
-</p>
-
-
-<!--  @instagram.each do |instagram|  -->
-
-<!--  image_tag instagram.images.thumbnail.url  -->
-
- <!-- end  -->
-
+<div class="col-md-3">
 <% @barber ||= current_barber %>
 <div class="stats">
   <!-- <a href=" following_barber_path(@barber) "> -->
@@ -33,6 +25,40 @@
     followers
   </a>
 </div>
+</div>
+
+<div class="col-md-5">
+  <div id="bookingjs">
+  <script type="text/javascript" src="//ajax.googleapis.com/ajax/libs/jquery/2.1.3/jquery.min.js"></script>
+  <script type="text/javascript" src="http://cdn.timekit.io/booking-js/v1/booking.min.js" defer></script>
+  <script type="text/javascript">
+    window.timekitBookingConfig = {
+      name: 'example',
+      email: 'roger.rodriguez666@gmail.com',
+      apiToken: 'wunUN3jcZkG5TOaL0bHZ2YHFpFvfpvEm',
+      calendar: '0b1cddd7-30c3-4865-b9f1-b50f190b3f0b',
+      avatar: 'https://lh5.googleusercontent.com/-EEQYr2CfUb0/AAAAAAAAAAI/AAAAAAAAA4I/-O1ovFR9J5M/photo.jpg',
+      timekitFindTime: {
+        filters: {
+          and: [
+            {
+              business_hours: { }
+            }
+          ]
+        }
+      }
+    }
+  </script>
+</div>
+</div>
+
+
+
+<!--  @instagram.each do |instagram|  -->
+
+<!--  image_tag instagram.images.thumbnail.url  -->
+
+ <!-- end  -->
 
 
 
@@ -40,4 +66,3 @@
 <%= link_to 'Edit', edit_barber_path(@barber) %> |
 <%= button_to 'Destroy', @barber, method: :delete, data: { confirm: 'Are you sure?' } %>
 <% end %>
-<%= link_to 'back', shop_path(@shop) %>
