--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -13,6 +13,29 @@
  *= require_tree .
  *= require_self
  */
+
+
+
+
+ .useless {
+ background: url(http://princessprofessional.com/wp-content/uploads/2016/01/rauzel-about.jpg) no-repeat center center fixed;
+ -webkit-background-size: cover;
+ -moz-background-size: cover;
+ -o-background-size: cover;
+ background-size: cover;
+}
+
+
+  .left-container{
+    background: rgba(13, 12, 12, 0.3);
+
+ }
+
+.profile-container {
+  padding-top: 55px;
+
+}
+
 .profile-info {
   margin: 25px;
 }
