added review form

--- a/app/views/barbers/show.html.erb
+++ b/app/views/barbers/show.html.erb
@@ -70,7 +70,7 @@
 			<%= render @barber.reviews %>
 
 			<div>
-				<%= link_to "Add Review", new_review_path(@barber), class: "btn-custom" %>
+				<%= link_to "Add Review", new_barber_review_path(@barber), class: "btn-custom" %>
 			</div>
 
 		</div>
