--- a/app/views/shops/useless.html.erb
+++ b/app/views/shops/useless.html.erb
@@ -3,5 +3,5 @@
 
 
 <div id="initial-button">
-<%= button_to 'Find Styles',shops_path, method: :get %>
+<%= link_to 'Find Styles',shops_path, method: :get %>
 </div>
