--- a/app/views/barbers/show.html.erb
+++ b/app/views/barbers/show.html.erb
@@ -16,11 +16,11 @@
   <% @barber ||= current_barber %>
   <div class="stats">
     <!-- <a href=" following_barber_path(@barber) "> -->
-      <strong id="following" class="stat">
+      <!-- <strong id="following" class="stat">
         <%= @barber.following.count %>
       </strong>
       following
-    </a>
+    </a> -->
     <!-- <a href=" followers_barber_path(@barber) "> -->
       <strong id="followers" class="stat">
         <%= @barber.followers.count %>
