--- a/app/views/shops/show.html.erb
+++ b/app/views/shops/show.html.erb
@@ -1,7 +1,7 @@
 
 
 
-<div  class= "col-md-6 col-md-offset-3 text-center">
+<div  class= "col-md-6 col-md-offset-3 text-center barbers">
   <h1><%= @shop.name %></h1>
 
   <% @shop.barbers.each do |barber| %>
