--- a/app/views/shops/useless.html.erb
+++ b/app/views/shops/useless.html.erb
@@ -1,4 +1,7 @@
-<div id="header" class= "col-md-6 col-md-offset-3 text-center">
+<div id="useless">
+
+
+<div id="header" class= "text-center">
 <h1>Styles</h1>
 <form class="form-inline">
   <div class="form-group">
@@ -9,5 +12,6 @@
 
 <div id="initial-button" class="col-md-12" >
 <%= button_to 'Find Stylist Near You',shops_path, method: :get, class:"btn btn-primary" %>
+</div>
 </div>
 </div>
