comments for controllers removed useless things

--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -13,89 +13,70 @@
  *= require_tree .
  *= require_self
  */
+  
 
+  body {
+    height: 100%;
+    background: url(http://wallpaperswide.com/download/light_background-wallpaper-1280x720.jpg) no-repeat center center fixed;
+    -webkit-background-size: cover;
+    -moz-background-size: cover;
+    -o-background-size: cover;
+    background-size: cover;
+  }
 
-body {
-  /*height: 100%;
-  padding-top: 18em;
-  background: url(http://www.wellgroomedgroom.com/wp-content/uploads/2014/06/virile-barber-shop.jpg) no-repeat center center fixed;
-  -webkit-background-size: cover;
-  -moz-background-size: cover;
-  -o-background-size: cover;
-  background-size: cover;*/
-  height: 100%;
-  /*padding-top: 18em;*/
-  background: url(http://wallpaperswide.com/download/light_background-wallpaper-1280x720.jpg) no-repeat center center fixed;
-  -webkit-background-size: cover;
-  -moz-background-size: cover;
-  -o-background-size: cover;
-  background-size: cover;
+  h1 {
+    color: #202020;
+    font-family: 'Montserrat', sans-serif;
+    font-size: 100px;
+    line-height: 160px;
+    font-weight: normal;
+    margin-bottom: 0px;
+    margin-top: 40px;
+    text-align: center;
+    text-shadow: 0 1px 1px #fff;
+  }
 
+   /*search page styles*/
 
-
-
-}
-#useless{
-  height: 100%;
-  padding-top: 18em;
-  background: url(http://i.imgur.com/wIfeNK3.jpg) no-repeat center center fixed;
-  -webkit-background-size: cover;
-  -moz-background-size: cover;
-  -o-background-size: cover;
-  background-size: cover;
-}
-.profile-container {
-    /*background-color: #FAEBD7;*/
-
-    background: rgba(24, 24, 24, 0.3);
-}
-
-.barbers {
-    margin-top: 17em;
-background: rgba(13, 12, 12, 0.3);
-
-}
- /*#header{
- background: url(http://i.imgur.com/wIfeNK3.jpg) no-repeat center center fixed;
- -webkit-background-size: cover;
- -moz-background-size: cover;
- -o-background-size: cover;
- background-size: cover;
- height: 100%;
-}*/
-
-
-
-  .left-container{
-    background: rgba(13, 12, 12, 0.3);
-
- }
-
-.profile-container {
-  padding-top: 55px;
-  padding-top: 11em;
-
-}
-
-.profile-info {
-  margin: 25px;
-}
-.profile-pic {
-  margin: 25px;
-}
- h1 {
-
-   color: #202020;
-   font-family: 'Montserrat', sans-serif;
-   font-size: 100px;
-   line-height: 160px;
-   font-weight: normal;
-   margin-bottom: 0px;
-   margin-top: 40px;
-   text-align: center;
-   text-shadow: 0 1px 1px #fff; }
+  #useless{
+    height: 100%;
+    padding-top: 18em;
+    background: url(http://i.imgur.com/wIfeNK3.jpg) no-repeat center center fixed;
+    -webkit-background-size: cover;
+    -moz-background-size: cover;
+    -o-background-size: cover;
+    background-size: cover;
+  }
 
   #initial-button {
     margin-top: 40px;
     text-align: center;
+  }
+
+  /*barber show styles*/
+
+  .profile-container {
+    background: rgba(24, 24, 24, 0.3);
+    padding-top: 55px;
+    padding-top: 11em;
+  }
+
+  .left-container{
+      background: rgba(13, 12, 12, 0.3);
+
+   }
+
+   .profile-info {
+     margin: 25px;
+   }
+
+   .profile-pic {
+     margin: 25px;
+   }
+
+  /*shops show*/
+
+  .barbers {
+    margin-top: 17em;
+    background: rgba(13, 12, 12, 0.3);
   }
