--- a/app/views/barbers/_form.html.erb
+++ b/app/views/barbers/_form.html.erb
@@ -36,7 +36,7 @@
 
         <div class="form_field">
             <p>
-              <%= instance_post.label :password_confirmatio %><br />
+              <%= instance_post.label :password_confirmation %><br />
               <%= instance_post.password_field :password_confirmation %>
             </p>
           </div>
@@ -62,9 +62,9 @@
       </p>
     </div>
 
-    <div class="action_buttom">
+    <div class="action_button">
       <p>
-        <%= instance_post.submit 'save this sir', class: "save_boton" %>
+        <%= instance_post.submit 'save this sir', class: "save_button" %>
       </p>
     </div>
 <% end %>
