--- a/app/views/barbers/show.html.erb
+++ b/app/views/barbers/show.html.erb
@@ -1,19 +1,17 @@
 <div class="container profile-container">
 
 <div class="col-md-4 left-container">
-  <%= link_to 'back', shop_path(@shop) %>
+  <%= link_to shop_path(@shop) do  %>
+      <i class="fa fa-angle-double-left fa-1x"> </i> Back <!--  targeting css for going back shop show case -->
+  <% end %>
+
+
+  <!-- profile picture been uplead it to amazon ms3 service  -->
+
   <div class="profile-pic"><%= image_tag @barber.avatar.url(:square) %></div>
-  <div class="profile-info">
-    <%= @barber.name %> <br>
-    <%= @barber.instagram %>
-  </div>
-  <div class="col-md-4">
-    <% @instagram.each do |instagram| %>
 
-    <%= image_tag instagram.images.thumbnail.url  %>
+  <!-- followers for barber -->
 
-     <% end %>
-  <% @barber ||= current_barber %>
   <div class="stats">
     <!-- <a href=" following_barber_path(@barber) "> -->
       <!-- <strong id="following" class="stat">
@@ -28,35 +26,50 @@
       followers
     </a>
   </div>
+
+<!-- -------------------------------------------------------------- -->
+<!-- barber name  -->
+  <div class="profile-info">
+    <%= @barber.name %> <br>
+
   </div>
+
+
+
+
 </div>
 
 
+
+      <!--  booking calander -->
 
 
 <div class="col-md-8">
   <div id="bookingjs">
-  <script type="text/javascript" src="//ajax.googleapis.com/ajax/libs/jquery/2.1.3/jquery.min.js"></script>
-  <script type="text/javascript" src="http://cdn.timekit.io/booking-js/v1/booking.min.js" defer></script>
-  <script type="text/javascript">
-    window.timekitBookingConfig = {
-      name: 'example',
-      email: 'roger.rodriguez666@gmail.com',
-      apiToken: 'wunUN3jcZkG5TOaL0bHZ2YHFpFvfpvEm',
-      calendar: '0b1cddd7-30c3-4865-b9f1-b50f190b3f0b',
-      avatar: 'https://lh5.googleusercontent.com/-EEQYr2CfUb0/AAAAAAAAAAI/AAAAAAAAA4I/-O1ovFR9J5M/photo.jpg',
-      timekitFindTime: {
-        filters: {
-          and: [
-            {
-              business_hours: { }
-            }
-          ]
-        }
+    <script type="text/javascript" src="//ajax.googleapis.com/ajax/libs/jquery/2.1.3/jquery.min.js"></script>
+    <script type="text/javascript" src="http://cdn.timekit.io/booking-js/v1/booking.min.js" defer></script>
+    <script type="text/javascript">
+      window.timekitBookingConfig = {
+        name: 'Steven Bates',
+        email: 'roger.rodriguez666@gmail.com',
+        apiToken: 'TiG0KedJkkdRstOU4pj9CP6Daod0U0zg',
+        calendar: '0b1cddd7-30c3-4865-b9f1-b50f190b3f0b',
+        timekitFindTime: {
+          filters: {
+            and: [
+              {
+                business_hours: { }
+              },
+              {
+                exclude_weekend: { }
+              }
+            ]
+          }
+        },
+        avatar: 'http://bushwickdaily.com/wp-content/uploads/2013/01/03.jpg'
       }
-    }
-  </script>
-</div>
+    </script>
+  </div>
 </div>
 
 
