--- a/app/views/shops/index.html.erb
+++ b/app/views/shops/index.html.erb
@@ -1,66 +1,23 @@
+<!-- google maps api version 3.23 -->
 <script src="//maps.google.com/maps/api/js?v=3.23&key=AIzaSyDx_QuTTTgggaYz61nA2JVp3m2cpxIYPxU&signed_in=true&libraries=geometry&language=&hl=&region="></script>
+
+<!-- allows acces to google markers -->
 <script src="//google-maps-utility-library-v3.googlecode.com/svn/tags/markerclustererplus/2.0.14/src/markerclusterer_packed.js"></script>
-<script src='//google-maps-utility-library-v3.googlecode.com/svn/tags/infobox/1.1.9/src/infobox_packed.js' type='text/javascript'></script> <!-- only if you need custom infoboxes -->
 
-
-
-<h1>Listing Shops</h1>
-
-<table>
-  <thead>
-    <tr>
-      <th>Name</th>
-      <th>Address</th>
-      <th>Phone</th>
-      <th colspan="3"></th>
-    </tr>
-  </thead>
-
-  <tbody>
-    <% @shops.each do |shop| %>
-      <tr>
-        <td><%= shop.name %></td>
-        <td><%= shop.address %></td>
-
-        <td><%= link_to 'Show', shop %></td>
-        <td><%= link_to 'Edit', edit_shop_path(shop) %></td>
-        <td><%= link_to 'Destroy', shop, method: :delete, data: { confirm: 'Are you sure?' } %></td>
-      </tr>
-    <% end %>
-    <%= link_to 'New Shop', new_shop_path %>
-  </tbody>
-</table>
+<!-- google map utility for custom boxes -->
+<script src='//google-maps-utility-library-v3.googlecode.com/svn/tags/infobox/1.1.9/src/infobox_packed.js' type='text/javascript'></script>
 
 <br>
-
-<p>Click the button to get your coordinates.</p>
-
-<button onclick="getLocation()">Try It</button>
-
-<p id="demo"></p>
-
-<script>
-var x = document.getElementById("demo");
-
-function getLocation() {
-   if (navigator.geolocation) {
-       navigator.geolocation.getCurrentPosition(showPosition);
-   } else {
-       x.innerHTML = "Geolocation is not supported by this browser.";
-   }
-}
-
-function showPosition(position) {
-    x.innerHTML = "Latitude: " + position.coords.latitude +
-   "<br>Longitude: " + position.coords.longitude;
-}
-</script>
+<br>
 
 
+
+<!-- map targeted in css for styling  -->
   <div id="map" ></div>
 
 
-
+  <!-- excuse my javascript in my html future self move this asap!! -->
+  <!-- handler getting place in google maps -->
   <script type="text/javascript">
   handler = Gmaps.build('Google');
   handler.buildMap({
@@ -73,3 +30,58 @@ function showPosition(position) {
     handler.fitMapToBounds();
   });
   </script>
+
+
+
+
+  <table>
+    <thead>
+      <tr>
+        <th>Name</th>
+        <th>Address</th>
+        <th>Phone</th>
+        <th colspan="3"></th>
+      </tr>
+    </thead>
+
+    <tbody>
+      <% @shops.each do |shop| %>
+        <tr>
+          <td><%= shop.name %></td>
+          <td><%= shop.address %></td>
+
+          <td><%= link_to 'Show', shop %></td>
+          <td><%= link_to 'Edit', edit_shop_path(shop) %></td>
+          <td><%= link_to 'Destroy', shop, method: :delete, data: { confirm: 'Are you sure?' } %></td>
+        </tr>
+      <% end %>
+      <%= link_to 'New Shop', new_shop_path %>
+    </tbody>
+  </table>
+
+  <br>
+
+  <p>Click the button to get your coordinates.</p>
+
+  <script>
+  var x = document.getElementById("demo");
+// getting geolocation from user device by passing showposition object to the call back function getCurrentPosition
+  function getLocation() {
+     if (navigator.geolocation) {
+         navigator.geolocation.getCurrentPosition(showPosition);
+     } else {
+         x.innerHTML = "Geolocation is not supported by this browser.";
+     }
+  }
+
+// show position method turns coordinates gather in the position method and returns and address
+  function showPosition(position) {
+      x.innerHTML = "Latitude: " + position.coords.latitude +
+     "<br>Longitude: " + position.coords.longitude;
+  }
+  </script>
+
+ <!-- function getlocation is getting pass to show position so it will return latitude and longitude -->
+  <button onclick="getLocation()">Try It</button>
+
+  <p id="demo"></p>
